--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "ava",
+    "test:coverage": "nyc ava",
     "lint": "standard"
   },
   "keywords": [
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "ava": "^0.25.0",
+    "nyc": "^11.6.0",
     "standard": "^11.0.1"
   }
 }
