--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "ava": "^0.25.0",
     "coveralls": "^3.0.0",
     "nyc": "^11.6.0",
-    "standard": "^11.0.1"
+    "standard": "^11.0.1",
+    "testdouble": "^3.7.0"
   },
   "nyc": {
     "reporter": [
