--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "license": "MIT",
   "dependencies": {
     "azure-keyvault": "^3.0.4-preview",
-    "ms-rest-azure": "^2.5.5",
-    "npm": "^5.8.0"
+    "ms-rest-azure": "^2.5.5"
   },
   "devDependencies": {
     "ava": "^0.25.0",
